objects/Idea_Team__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the project team member doesn't exist as a user in Salesforce you can add them as a contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N4100000GiuqpEAB</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Ideas_Projects__c</referenceTo>
        <relationshipName>R00N4100000GiuqYEAR</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this feeling to track individuals participating on the project team.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N4100000GiuqTEAR</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Idea Team</label><nameField>
        <label>Role</label>
        <type>Text</type>
    </nameField><pluralLabel>Idea Team</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>